--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dev-utils": "^7.0.3",
     "react-dom": "^16.8.3",
     "react-search-field": "^1.0.0",
+    "react-youtube": "^7.9.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
